5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4371/executions/1596_1016.log
== TEST (2019-04-02 12:47:16) 
-- CODE:
base = input("informe a base")
altura = input("informe a altura")
area = base + altura / 2.0
print "area:", area

-- ERROR:
File "XXXX", line 4
    print "area:", area
                ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("area:", area)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:47:36) 
-- CODE:
base = input("informe a base")
altura = input("informe a altura")
area = base + altura / 2.0
print("area:"), area

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = base + altura / 2.0
TypeError: unsupported operand type(s) for /: 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:48:22) 
-- CODE:
base = input("informe a base")
altura = input("informe a altura")
area = float base + altura / 2.0
print("area:"), area

-- ERROR:
File "XXXX", line 3
    area = float base + altura / 2.0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:49:39) 
-- CODE:
base = input("informe a base: ")
altura = input("informe a altura: ")
area = base + altura / 2
print("area:"), area

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = base + altura / 2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:36) 
-- CODE:
base = input("informe a base: ")
altura = input("informe a altura: ")
area =input(int(base + altura / 2))
print("area:"), area

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area =input(int(base + altura / 2))
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:50:57) 
-- CODE:
base = input("informe a base: ")
altura = input("informe a altura: ")
area =input(int(base , altura / 2))
print("area:"), area

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area =input(int(base , altura / 2))
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:51:47) 
-- CODE:
base = input("informe a base: ")
altura = input("informe a altura: ")
area =input(base * altura / 2)
print("area:"), area

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area =input(base * altura / 2)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:52:15) 
-- CODE:
base = input("informe a base: ")
altura = input("informe a altura: ")
area = base * altura / 2
print("area:"), area

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = base * altura / 2
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:53:03) 
-- CODE:
base = input("informe a base: ")
altura = input("informe a altura: ")
area = input base * altura / 2
print("area:"), area

-- ERROR:
File "XXXX", line 3
    area = input base * altura / 2
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:53:18) 
-- CODE:
base = input("informe a base: ")
altura = input("informe a altura: ")
area = input(base * altura / 2)
print("area:"), area

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = input(base * altura / 2)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:54:01) 
-- CODE:
base = input("informe a base: ")
altura = input("informe a altura: ")
area = input(int(base * altura / 2))
print("area:"), area

-- EXECUTION TIME:
0.192608
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1016/main.py", line 3, in <module>
    area = input(int(base * altura / 2))
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:54:03) 
-- CODE:
base = input("informe a base: ")
altura = input("informe a altura: ")
area = input(int(base * altura / 2))
print("area:"), area

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = input(int(base * altura / 2))
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:56:07) 
-- CODE:
base = input("informe a base: ")
altura = input("informe a altura: ")
area = input(int(base * altura / 2))
print((round)"area:"), area

-- ERROR:
File "XXXX", line 4
    print((round)"area:"), area
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:56:46) 
-- CODE:
base = input("informe a base: ")
altura = input("informe a altura: ")
area = input(int(base * altura / 2))
print("area: "), area

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = input(int(base * altura / 2))
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:57:20) 
-- CODE:
base = input("informe a base: ")
altura = input("informe a altura: ")
area = input(str(base * altura / 2))
print("area: "), area

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = input(str(base * altura / 2))
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:58:47) 
-- CODE:
base = input("informe a base: ")
altura = input("informe a altura: ")
area = input(str(base * altura / 2))
print("area: "), area

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = input(str(base * altura / 2))
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:59:03) 
-- CODE:
base = input("informe a base: ")
altura = input("informe a altura: ")
area = input(str(base * altura / 2))
print("area: "), area


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = input(str(base * altura / 2))
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
